unpackaged/main/default/objects/Performance_Review__c/Performance_Review__c.object-meta.xml
<CustomObject>
    <label>Performance Review</label>
    <nameField>
        <displayFormat>PR-{00000}</displayFormat>
        <label>Performance Review Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Performance Reviews</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>