unpackaged/main/default/objects/Performance_Review__c/fields/Target__c.field-meta.xml
<CustomField>
    <fullName>Target__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Target</label>
    <referenceTo>Employee_Target__c</referenceTo>
    <relationshipLabel>Performance Reviews</relationshipLabel>
    <relationshipName>Performance_Reviews</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>